--- a/package.json
+++ b/package.json
@@ -9,23 +9,31 @@
     "lint": "next lint",
     "postinstall": "prisma generate"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^2.9.7",
     "@prisma/client": "^4.1.1",
     "@trpc/client": "^9.26.2",
     "@trpc/next": "^9.26.2",
     "@trpc/react": "^9.26.2",
     "@trpc/server": "^9.26.2",
+    "date-fns": "^2.29.1",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha-v3": "^1.10.0",
     "react-hook-form": "^7.34.0",
+    "react-hot-toast": "^2.3.0",
     "react-query": "^3.39.2",
     "superjson": "^1.9.1",
     "zod": "^3.17.3"
   },
   "devDependencies": {
-    "@types/node": "18.0.0",
+    "@types/node": "^18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.8",
@@ -34,6 +42,7 @@
     "postcss": "^8.4.14",
     "prisma": "^4.1.1",
     "tailwindcss": "^3.1.7",
-    "typescript": "4.7.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   }
 }
