--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^2.9.7",
     "@prisma/client": "^4.1.1",
+    "@tanstack/react-table": "^8.5.11",
     "@trpc/client": "^9.26.2",
     "@trpc/next": "^9.26.2",
     "@trpc/react": "^9.26.2",
