--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@trpc/react": "^9.26.2",
     "@trpc/server": "^9.26.2",
     "date-fns": "^2.29.1",
+    "exceljs": "^4.3.0",
+    "json2xls": "^0.1.2",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
